Resolved Spectra category not visible in style book, Resolved on home page multiple style tag get created issue and preview image width/hight not proper in style book.

--- a/src/common-editor.scss
+++ b/src/common-editor.scss
@@ -832,6 +832,17 @@ button.components-button.uagb-review-select-btn.is-secondary {
 	}
 }
 
+.edit-site-style-book__example-preview {
+	.block-editor-block-preview__container {
+		.block-editor-block-preview__content {
+			iframe{
+				width: 240px !important;
+				height: 218px !important;
+			}
+		}
+	}
+}
+
 @import "styles/gutenberg-override";
 @import "styles/control-responsive";
 @import "styles/control-header";
